--- a/package.json
+++ b/package.json
@@ -1,43 +1,33 @@
 {
-  "name": "genny",
-  "version": "0.0.1",
+  "name": "kithara",
+  "version": "0.0.2",
   "description": "",
   "keywords": [],
   "author": "Joseph Post",
   "license": "ISC",
   "main": "src/index.js",
   "bin": {
-    "genny": "src/index.js"
+    "kithara": "src/index.js"
   },
   "scripts": {
-    "build": "node scripts/build",
-    "clean": "rimraf build/**",
-    "dev": "nodemon -w src -x \"run-s clean build serve\" -e \"pug ejs md js html\"",
     "lint": "prettier --write \"{src,test}/**/*.js\"",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "serve": "hs build -c-1",
-    "test": "npm run build"
+    "test": "echo \"no tests yet :(\""
   },
   "prettier": {
     "singleQuote": true,
     "semi": false
   },
   "dependencies": {
+    "fs-extra": "^8.0.1",
+    "jstransformer-marked": "^1.0.3",
     "minimist": "^1.2.0",
+    "outdent": "^0.7.0",
     "pug": "^2.0.4",
     "purecss": "^1.0.0",
+    "purify-css": "^1.2.5",
     "w3-css": "^4.1.0"
   },
   "devDependencies": {
-    "fs-extra": "^8.0.1",
-    "gh-pages": "^2.0.1",
-    "http-server": "^0.11.1",
-    "jstransformer-marked": "^1.0.3",
-    "nodemon": "^1.19.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.2",
-    "purify-css": "^1.2.5",
-    "rimraf": "^2.6.3"
+    "prettier": "^1.18.2"
   }
 }
